--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,88 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
+.main{
+  background-color: rgb(247, 244, 241);
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.title{
+  font-size : 35px;
+  font-weight: 900;
+  color: rgb(57, 54, 79);
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.cardTitle{
+  font-size: 20px;
+  font-weight: 700;
+  color:rgb(57, 54, 79);
+  letter-spacing: 0.25px;
+  ;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
+.cardDate{
+  font-size: 16px;
+  font-weight: 600px;
+  color: rgb(209, 65, 12);
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  ;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.card{
+  display: block;
+  width: 150px;
+  background-color: rgba(255, 255, 255, 0.521);
+  padding: 4px 16px;
+  justify-content: center;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.card:hover{
+  box-shadow: 0 16px 64px -16px rgb(46 55 77 / 24%);
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.eventList{
+display:flex;
+gap: 12px;
+width: 100%;
+justify-content: center;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.buttons {
+  display:flex;
+  justify-content: center;
+  padding-top: 16px;
+}
+.buttons button {
+ background-color: transparent;
+ border: none;
+ padding: 16px 8px;
+ font-size: 20px;
+ cursor: pointer;
+}
+.buttons button.active {
+  color: blue;
+  border-bottom: 2px solid blue;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.eventTitle{
+  font-size: 20px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.eventDescription{
+  font-size: 15px;
+}
+
+.eventDate{
+  font-size: 15px;
+}
+
+.eventTicketutton{
+  color: black;
+}
+
+.typeEvent{
+  font-size: 20px;
+  position: relative;
+  display: block;
+  height: 3px;
+  width: 100%;
+  background: black;
 }
