--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
+  background-color: rgba(247, 244, 244);
 }
 
 a {
@@ -13,4 +15,179 @@ a {
 
 * {
   box-sizing: border-box;
+}
+/* First I have prepared the responsive vstyles for mobile devices */
+.main{
+  color: #1e0a3c;
+  min-height: 100vh;
+  background-color: rgba(247, 244, 244);
+}
+
+.title{
+  font-size : 35px;
+  font-weight: 900;
+  color: rgb(57, 54, 79);
+  text-align: center;
+}
+
+.cardTitle{
+  font-size: 20px;
+  font-weight: 700;
+  color:rgb(57, 54, 79);
+  letter-spacing: 0.25px;
+}
+
+.cardDate{
+  font-size: 16px;
+  font-weight: 600px;
+  color: rgb(209, 65, 12);
+  justify-content: center;
+}
+
+.card{
+  display: block;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  padding: 4px 16px;
+  justify-content: center;
+}
+
+.card:hover{
+  box-shadow: 0 16px 64px -16px rgb(46 55 77 / 24%);
+}
+
+.eventList{
+display:flex;
+flex-direction: column;
+gap: 12px;
+width: 100%;
+justify-content: center;
+}
+
+.buttons {
+  display:flex;
+  justify-content: center;
+  padding-top: 16px;
+}
+
+.buttons button {
+ background-color: transparent;
+ border: none;
+ padding: 16px 8px;
+ font-size: 20px;
+ cursor: pointer;
+}
+
+.buttons button.active {
+  color: blue;
+  border-bottom: 2px solid blue;
+}
+
+.cardDescription{
+  font-size: 15px;
+  color: #6f7287;
+}
+
+.eventTicketutton{
+  color: black;
+}
+
+.typeEvent{
+  font-size: 20px;
+  position: relative;
+  display: block;
+  height: 3px;
+  width: 100%;
+  background: black;
+}
+
+.eventCard{
+  display: flex;
+  width: 100%;
+  background-color: white;
+  flex-direction: column;
+}
+
+.cardImg{
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.cardInfo{
+  padding: 30px;
+}
+
+.buttonTicket{
+  background-color: #0d8547;
+  color: white;
+  width: 100%;
+  display: block;
+  text-align: center;
+  border-radius: 4px;
+  padding: 10px 30px;
+  font-weight: 600;
+}
+
+.ticketList{
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.ticket{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: flex-start;
+  padding: 10px 10px;
+  border-bottom: 1px solid #6f7287;
+  background-color: white;
+}
+
+.ticketName{
+  color:#1e0a3c;
+  font-weight: 700;
+}
+
+.ticketCost{
+  color: #39364f;
+  font-weight: 600;
+}
+
+.ticketDesc{
+  color: #6f7287;
+  font-weight: 400;
+}
+
+.ticketStatus{
+  background-color: #3dd386;
+  color: white;
+  display: inline;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 15px;
+  font-weight: 600;
+}
+
+
+
+/* Specifications for responsive style on website */
+@media (min-width: 600px) {
+  .eventList {
+    width: 100%;
+    flex-direction: row;  
+  }
+  .card {
+    width: 150px;
+  }
+  .eventCard{
+    flex-direction: row;
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  .ticketList{
+    max-width: 75%;
+    margin: 0 auto;
+  }
 }
